Fix overflow in profile card, add custom config

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -444,3 +444,10 @@ figure.highlight
             border: none
     .file
         all: initial
+
+/* ---------------------------------
+ *        Fix Profile Card
+ * --------------------------------- */
+@media screen and (min-width: 769px), print
+    .level > .level-item:not(.is-narrow)
+        width: 0
